<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.bigbase</groupId>
    <artifactId>carrot-cache</artifactId>
    <packaging>jar</packaging>
    <name>Carrot Cache</name>
    <version>0.5.0-SNAPSHOT</version>
    <url>http://www.server.com</url>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                    <!--source>11</source-->
                    <!--target>11</target-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
       <version>2.4</version>
       <executions>
         <execution>
           <goals>
             <goal>test-jar</goal>
           </goals>
         </execution>
       </executions>
     </plugin>
     <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>-Xmx4g --add-opens java.base/java.nio=ALL-UNNAMED</argLine>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <excludes>
                        <exclude>**/TestFileCacheMultithreadedStress.java</exclude>
                        <exclude>**/TestOffheapCacheMultithreadedStress.java</exclude>
                        <exclude>**/TestMemoryIndexMQMultithreadedStress.java</exclude>
			<exclude>**/TestMemoryIndexAQMultithreadedStress.java</exclude> 
                        <exclude>**/TestOffheapCacheMultithreadedZipfStress.java</exclude>
		 	<exclude>**/TestFileCacheMultithreadedZipfStress.java</exclude>
                        <exclude>**/TestHybridCacheMultithreadedZipfStress.java</exclude>
		    </excludes>
                    <systemProperties>
                        <property>
                            <name>surefire</name>
                            <value>true</value>
                        </property>
                    </systemProperties>
                    <systemPropertyVariables>
                        <property>
                            <name>configurationFile</name>
                            <value>${project.build.directory}/conf/log4j2-console.xml</value>
                        </property>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
    </plugins>
    </build>
    <!--dependencyManagement-->
        <dependencies>
	<dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.17.2</version>
		<!--type>pom</type-->
       </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>
	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
	<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
    		<version>4.6.1</version>
    		<scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
	<dependency>
    		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-math3</artifactId>
    		<version>3.6.1</version>
                <scope>test</scope>
	</dependency>
        </dependencies>
    <!--/dependencyManagement-->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>

